--- a/style.css
+++ b/style.css
@@ -1,4 +1,25 @@
 input {
     text-align:center;
+    margin:5px;
+    /* display: inline-block; */
+   
     
 }
+ .form {
+  
+   margin-left:30%;
+    }
+   
+    label{
+        /* display:inline-block; */
+        text-align: right;
+        float: left;
+        width:150px;
+        padding-right: 10px;
+        margin:5px;
+        /* margin-bottom: 10px; */
+    }
+    button{
+        margin-top: 10px;
+    }
+ 
